examples/invalid/not_declared/param_type.vbr
track f (x: A) {
    |>(x.a)|
}
moderato () {
    |>(2)|
}